--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,16 @@
 name: Build and publish to ghcr.io
 
 on:
+  release:
+    types: [ published ]
+  pull_request:
+    branches:
+      - main
+      - 'release/*'
   push:
     branches:
       - main
+      - 'release/*'
 
 jobs:
   build:
@@ -30,14 +37,14 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.CI_BOT_USERNAME }}
-          password: ${{ secrets.CI_BOT_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and Publish
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          push: true
+          push: ${{ github.event_name == 'push' || github.event_name == 'release' }}
